[gd_scene load_steps=16 format=3 uid="uid://ry4tbw4myx3g"]

[ext_resource type="Script" path="res://scenes/enemies/hunter.gd" id="1_wtvk4"]
[ext_resource type="Texture2D" uid="uid://2ud7mcucfk0v" path="res://graphics/enemies/hunter/parts/torso.png" id="2_ptv1e"]
[ext_resource type="Texture2D" uid="uid://21cygptv8jro" path="res://graphics/enemies/hunter/parts/leg_front_inner.png" id="3_tuvxk"]
[ext_resource type="Texture2D" uid="uid://kcdea1g07i2o" path="res://graphics/enemies/hunter/parts/leg_front_outer.png" id="4_1ehmp"]
[ext_resource type="Texture2D" uid="uid://wfrj0b8340ue" path="res://graphics/enemies/hunter/parts/head.png" id="5_ie74i"]
[ext_resource type="Texture2D" uid="uid://cc6w0dxu7amcf" path="res://graphics/enemies/hunter/parts/leg_back_inner.png" id="6_msumh"]
[ext_resource type="Texture2D" uid="uid://bq2qcle0j8d2d" path="res://graphics/enemies/hunter/parts/leg_back_outer.png" id="7_8qahd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5ie60"]
radius = 35.0
height = 306.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5kxng"]
radius = 1186.08

[sub_resource type="CircleShape2D" id="CircleShape2D_nxmma"]
radius = 217.589

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_yuwdf"]
resource_name = "Front right leg"
target_nodepath = NodePath("../targets/front_right")
flip_bend_direction = true
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("torso/front_right_leg")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("torso/front_right_leg/front_right_claw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_uhba2"]
resource_name = "Front left leg"
target_nodepath = NodePath("../targets/front_left")
joint_one_bone_idx = 3
joint_one_bone2d_node = NodePath("torso/front_left_leg")
joint_two_bone_idx = 4
joint_two_bone2d_node = NodePath("torso/front_left_leg/claw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_a4vax"]
resource_name = "Rear right leg"
target_nodepath = NodePath("../targets/rear_right")
joint_one_bone_idx = 8
joint_one_bone2d_node = NodePath("torso/back_right_leg")
joint_two_bone_idx = 9
joint_two_bone2d_node = NodePath("torso/back_right_leg/claw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_lgpyo"]
target_nodepath = NodePath("../targets/rear_left")
flip_bend_direction = true
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("torso/back_left_leg")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("torso/back_left_leg/claw")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_kkv38"]
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_yuwdf")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_uhba2")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_a4vax")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_lgpyo")

[node name="hunter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_wtvk4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5ie60")

[node name="notice_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="notice_area"]
shape = SubResource("CircleShape2D_5kxng")

[node name="attack_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("CircleShape2D_nxmma")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="timers" type="Node" parent="."]

[node name="navigation" type="Timer" parent="timers"]
autostart = true

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2(-1, 0)
modification_stack = SubResource("SkeletonModificationStack2D_kkv38")

[node name="torso" type="Bone2D" parent="Skeleton2D"]

[node name="torso" type="Sprite2D" parent="Skeleton2D/torso"]
texture = ExtResource("2_ptv1e")

[node name="front_right_leg" type="Bone2D" parent="Skeleton2D/torso"]
position = Vector2(24, -55)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/torso/front_right_leg"]
position = Vector2(25, -33)
texture = ExtResource("3_tuvxk")

[node name="claw" type="Bone2D" parent="Skeleton2D/torso/front_right_leg"]
position = Vector2(46, -61)
scale = Vector2(0.999996, 0.999996)
auto_calculate_length_and_angle = false
length = 133.957
bone_angle = -63.498
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/torso/front_right_leg/claw"]
position = Vector2(41.6015, -41.0491)
texture = ExtResource("4_1ehmp")

[node name="front_left_leg" type="Bone2D" parent="Skeleton2D/torso"]
position = Vector2(-37, -53)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D2" type="Sprite2D" parent="Skeleton2D/torso/front_left_leg"]
position = Vector2(-26, -33.5)
scale = Vector2(-1, 1)
texture = ExtResource("3_tuvxk")

[node name="claw" type="Bone2D" parent="Skeleton2D/torso/front_left_leg"]
position = Vector2(-49, -60)
auto_calculate_length_and_angle = false
length = 123.684
bone_angle = -110.616
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/torso/front_left_leg/claw"]
position = Vector2(-43, -37)
scale = Vector2(-1, 1)
texture = ExtResource("4_1ehmp")

[node name="head" type="Bone2D" parent="Skeleton2D/torso"]
position = Vector2(-7, -100)
auto_calculate_length_and_angle = false
length = 119.377
bone_angle = -90.0

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/torso/head"]
position = Vector2(-2, -51)
texture = ExtResource("5_ie74i")

[node name="back_left_leg" type="Bone2D" parent="Skeleton2D/torso"]
position = Vector2(-17, 64)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/torso/back_left_leg"]
position = Vector2(-11, 37)
scale = Vector2(-1, 1)
texture = ExtResource("6_msumh")

[node name="claw" type="Bone2D" parent="Skeleton2D/torso/back_left_leg"]
position = Vector2(-31, 71)
auto_calculate_length_and_angle = false
length = 110.224
bone_angle = 90.0
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/torso/back_left_leg/claw"]
position = Vector2(-26, 48)
scale = Vector2(-1, 1)
texture = ExtResource("7_8qahd")

[node name="back_right_leg" type="Bone2D" parent="Skeleton2D/torso"]
position = Vector2(3, 64)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/torso/back_right_leg"]
position = Vector2(12, 37)
texture = ExtResource("6_msumh")

[node name="claw" type="Bone2D" parent="Skeleton2D/torso/back_right_leg"]
position = Vector2(29, 71)
auto_calculate_length_and_angle = false
length = 116.581
bone_angle = 90.0
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/torso/back_right_leg/claw"]
position = Vector2(33, 47)
texture = ExtResource("7_8qahd")

[node name="targets" type="Node2D" parent="."]

[node name="front_right" type="Marker2D" parent="targets"]
position = Vector2(79, -210)

[node name="rear_right" type="Marker2D" parent="targets"]
position = Vector2(70, 199)

[node name="front_left" type="Marker2D" parent="targets"]
position = Vector2(-111, -200)

[node name="rear_left" type="Marker2D" parent="targets"]
position = Vector2(-82, 200)

[connection signal="body_entered" from="notice_area" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="notice_area" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="timers/navigation" to="." method="_on_navigation_timeout"]
